--- a/package.json
+++ b/package.json
@@ -1,60 +1,174 @@
 {
   
   "name": "flipkart-clone",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
-    "jsonwebtoken": "^9.0.0",
-    "mdb-react-ui-kit": "^6.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-loader-spinner": "^6.1.4",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
-    "recharts": "^2.5.0",
-    "web-vitals": "^2.1.4"
+  
+    
+  "@fortawesome/fontawesome-free": "^6.4.2",
+  
+    
+  "@fortawesome/fontawesome-svg-core": "^6.4.0",
+  
+    
+  "@fortawesome/free-regular-svg-icons": "^6.4.0",
+  
+    
+  "@fortawesome/free-solid-svg-icons": "^6.4.0",
+  
+    
+  "@fortawesome/react-fontawesome": "^0.2.0",
+  
+    
+  "@reduxjs/toolkit": "^1.9.7",
+  
+    
+  "@testing-library/jest-dom": "^5.16.5",
+  
+    
+  "@testing-library/react": "^13.4.0",
+  
+    
+  "@testing-library/user-event": "^13.5.0",
+  
+    
+  "axios": "^1.3.4",
+  
+    
+  "bootstrap": "^5.2.3",
+  
+    
+  "jsonwebtoken": "^9.0.0",
+  
+    
+  "mdb-react-ui-kit": "^6.3.0",
+  
+    
+  "react": "^18.2.0",
+  
+    
+  "react-dom": "^18.2.0",
+  
+    
+  "react-icons": "^4.7.1",
+  
+    
+  "react-loader-spinner": "^6.1.4",
+  
+    
+  "react-redux": "^8.1.3",
+  
+    
+  "react-router-dom": "^6.4.5",
+  
+    
+  "react-scripts": "5.0.1",
+  
+    
+  "reactstrap": "^9.1.5",
+  
+    
+  "recharts": "^2.5.0",
+  
+    
+  "sweetalert2": "^11.10.4",
+  
+    
+  "sweetalert2-react-content": "^5.0.7",
+  
+    
+  "web-vitals": "^2.1.4"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+  
+    
+  "start": "react-scripts start",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject",
+  
+    
+  "predeploy": "npm run build",
+  
+    
+  "deploy": "gh-pages -d build"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   },
+  
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+  
+    
+  "gh-pages": "^6.0.0"
+  
   }
 }
