--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
   
     
+  "@emotion/react": "^11.11.3",
+  
+    
+  "@emotion/styled": "^11.11.0",
+  
+    
   "@fortawesome/fontawesome-free": "^6.4.2",
   
     
@@ -22,6 +28,18 @@
   
     
   "@fortawesome/react-fontawesome": "^0.2.0",
+  
+    
+  "@material-ui/core": "^4.12.4",
+  
+    
+  "@material-ui/icons": "^4.11.3",
+  
+    
+  "@mui/icons-material": "^5.15.8",
+  
+    
+  "@mui/material": "^5.15.7",
   
     
   "@reduxjs/toolkit": "^1.9.7",
@@ -39,7 +57,7 @@
   "axios": "^1.3.4",
   
     
-  "bootstrap": "^5.2.3",
+  "bootstrap": "^5.3.2",
   
     
   "jsonwebtoken": "^9.0.0",
@@ -49,6 +67,9 @@
   
     
   "react": "^18.2.0",
+  
+    
+  "react-bootstrap": "^2.10.0",
   
     
   "react-dom": "^18.2.0",
